metadata/objects/BreakSettings__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BreakSettings</relationshipLabel>
        <relationshipName>BreakSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Break_Length__c</fullName>
        <label>Break Length</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>break_delay__c</fullName>
        <defaultValue>4</defaultValue>
        <label>break delay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_of_breaks__c</fullName>
        <defaultValue>2</defaultValue>
        <label>number of breaks</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BreakSetting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BreakSettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BreakSettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>